// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubscribeFlowMessage rendering works for MPIM messages 1`] = `
Object {
  "attachments": Array [
    Object {
      "color": "#24292f",
      "text": "Subscribed to <https://github.com/bkeepers/dotenv|bkeepers/dotenv>",
    },
  ],
  "response_type": "in_channel",
}
`;

exports[`SubscribeFlowMessage rendering works for direct messages 1`] = `
Object {
  "attachments": Array [
    Object {
      "color": "#24292f",
      "text": "Subscribed to <https://github.com/bkeepers/dotenv|bkeepers/dotenv>",
    },
  ],
  "response_type": "in_channel",
}
`;

exports[`SubscribeFlowMessage rendering works for error: 404 1`] = `
Object {
  "attachments": Array [
    Object {
      "color": "danger",
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Could not find a repository for \`atom/atom\`",
    },
  ],
  "response_type": "ephemeral",
}
`;

exports[`SubscribeFlowMessage rendering works for error: invalid-link 1`] = `
Object {
  "attachments": Array [
    Object {
      "color": "danger",
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "\`https://amazon.com/atom/atom\` does not appear to be a GitHub link.",
    },
  ],
  "response_type": "ephemeral",
}
`;

exports[`SubscribeFlowMessage rendering works for error: no-installation 1`] = `
Object {
  "attachments": Array [
    Object {
      "color": "danger",
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Looks like the app isn't installed on your repository. <https://github.com/apps/url-to-slack-app|Install the GitHub App> to proceed.",
    },
  ],
  "response_type": "ephemeral",
}
`;

exports[`SubscribeFlowMessage rendering works for successfully subscribed 1`] = `
Object {
  "attachments": Array [
    Object {
      "color": "#24292f",
      "text": "Subscribed <#C1234> to <https://github.com/bkeepers/dotenv|bkeepers/dotenv>",
    },
  ],
  "response_type": "in_channel",
}
`;

exports[`SubscribeFlowMessage rendering works for successfully unsubscribed 1`] = `
Object {
  "attachments": Array [
    Object {
      "color": "#24292f",
      "text": "Unsubscribed <#C1234> from <https://github.com/bkeepers/dotenv|bkeepers/dotenv>",
    },
  ],
  "response_type": "in_channel",
}
`;
